fix: update sidebar email color for improved visibility

--- a/src/App.css
+++ b/src/App.css
@@ -654,7 +654,7 @@ body{
 .sidebar-email span{
   font-family: monospace;
   margin-left: 20px;
-  color: rgb(255, 115, 0);
+  color: rgb(115, 255, 0);
 }
 
 
